--- a/Knus.cabal
+++ b/Knus.cabal
@@ -56,6 +56,7 @@ library
   other-modules:       Knus.Parse
                        Knus.Lang
                        Knus.Interp
+                       Knus.Ouverture
 
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.12 && <4.15,
